--- a/src/app.scss
+++ b/src/app.scss
@@ -5,3 +5,11 @@
   margin: 16px 24px 16px 0;
   background: rgba(255, 255, 255, 0.2);
 }
+
+.errorIcon {
+  color: crimson;
+}
+
+.successIcon {
+  color: green;
+}
