--- a/src/pages/logbook/logbookDetail/components/materialCheckReport/styles.scss
+++ b/src/pages/logbook/logbookDetail/components/materialCheckReport/styles.scss
@@ -1,3 +1,11 @@
 .compartment {
   margin-bottom: 10px;
 }
+
+.timeLineTitle {
+  font-weight: 900;
+}
+
+.ant-timeline-item-tail {
+  border-left: 2px solid darkgray;
+}
