--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 @import "~antd/dist/antd.css";
 @import "./styles/container.scss";
+@import "./styles/colors.scss";
 
 @media print {
   @page { margin: 0; }
@@ -24,9 +25,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-print-color-adjust: exact !important;
-}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-size: 16px;
+  color: var(--text-primary)
 }
