--- a/src/layout/styles.scss
+++ b/src/layout/styles.scss
@@ -1,3 +1,32 @@
+@import "../styles/colors.scss";
+
 .rootSection {
   min-height: 100vh;
+  flex-direction: row;
+}
+
+.sideBar {
+  background-color: white;
+  box-shadow: 10px 0 20px -5px rgba(115,115,115,0.75);
+
+  &__row {
+    margin-bottom: 40px;
+    display: flex;
+  }
+
+  &__logo {
+    display: flex;
+    flex-direction: column;
+    font-size: 1.8em;
+    line-height: 1em;
+    color: var(--color-primary);
+
+    &__focus {
+      font-weight: 700;
+    }
+  }
+
+  .closeIcon {
+    margin-left: auto;
+  }
 }
