--- a/src/layout/styles.scss
+++ b/src/layout/styles.scss
@@ -7,7 +7,8 @@
 
 .sideBar {
   background-color: white;
-  box-shadow: 10px 0 20px -5px rgba(115,115,115,0.75);
+  box-shadow: 5px 0 15px -5px rgba(115,115,115,0.75);
+  z-index: 1;
 
   &__row {
     margin-bottom: 40px;
