--- a/src/pages/truck/truckDetail/styles.scss
+++ b/src/pages/truck/truckDetail/styles.scss
@@ -1,6 +1,6 @@
 @import "../../../styles/colors.scss";
 
-.truck-header {
+.btn-header {
   display: flex;
   justify-content: space-between;
 }
@@ -11,10 +11,6 @@
 
 .section {
   margin-bottom: 24px;
-}
-
-.printBtn {
-  margin-right: 10px;
 }
 
 // Colors for radiogroup
