--- a/src/components/appTable/styles.scss
+++ b/src/components/appTable/styles.scss
@@ -14,7 +14,7 @@
 .ant-table-tbody {
   :not(tr:last-of-type) {
     td {
-      border-bottom: 1px solid rgba(251, 131, 111, 0.4);
+      border-bottom: 1px solid var(--color-primary--faded);
     }
   }
   tr:last-of-type {
