--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,5 +1,8 @@
 :root {
   --color-primary: #FB836F;
+  --color-primary--faded: rgba(251, 131, 111, 0.4);
+
+  --color-gray: rgb(233, 233, 233);
 
   --text-primary: #2d2d2d;
 }
