--- a/src/components/compartmentList/components/addSectionModal/styles.scss
+++ b/src/components/compartmentList/components/addSectionModal/styles.scss
@@ -13,5 +13,9 @@
       border-color: white;
       color: var(--color-primary);
     }
+
+    &:active {
+      border-color: white;
+    }
   }
 }
