--- a/src/pages/truck/truckDetail/styles.scss
+++ b/src/pages/truck/truckDetail/styles.scss
@@ -3,6 +3,10 @@
 .btn-header {
   display: flex;
   justify-content: space-between;
+
+  .action-group > * {
+    margin-left: 10px;
+  }
 }
 
 .radio-group {
